<resources>
    <string name="app_name">Smile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_friend">Add friend</string>
    <string name="friend">Friends</string>
    <string name="language">Language</string>
    <string name="change_name">Change name</string>
    <string name="exit">Exit app</string>
    <string name="title_activity_first">first_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to app</string>
    <string name="sad_emotion">Sad</string>
    <string name="norm_emotion">Normal</string>
    <string name="happy_emotion">Happy</string>
    <string name="choose_emotion">Choose your emotion</string>
    <string name="text_support">Support</string>
    <string name="Change_account_text">Change account</string>
    <string name="add_friends">Add friends</string>
    <string name="text_language">Language</string>
    <string name="text_edit_name">Edit your name</string>
    <string name="text_search">Search</string>
    <string name="text_embrace">Embrace</string>
    <string name="text_Wave">Wave</string>
    <string name="text_Kiss">Kiss</string>
    <string name="text_share_emotion">Do you want share your emotion?</string>
    <string name="text_share">Share</string>
    <string name="text_name">Name</string>
    <string name="text_save">Save</string>
    <string name="text_enter_email">Enter your email*</string>
    <string name="text_enter_password">Enter your password*</string>
    <string name="text_hae_acc">You have not account? Register</string>
    <string name="text_login">Log in</string>
    <string name="text_enter_name">Enter your name*</string>
    <string name="text_enter_password_again">Enter your password again*</string>
    <string name="text_enter_phone_number">Enter your phone number*</string>
    <string name="text_already_have_acc">You have account? Sing in</string>
    <string name="text_choose_color">Choose person color</string>
    <string name="textview_support">In modest life we get used to online communication with our friend. We download differences massagers or every day we send a text email. In other situation we can record a voice massage. But if you haven’t interests information, but you just have a good or bad mood, you can share it without writing any messages. </string>
    <string name="text_find_friends">How find friends?</string>
    <string name="text_change_emotion">How change emotion?</string>
    <string name="text_change_personal_color">How change personal color?</string>
    <string name="text_send_reaction">How send the reaction?</string>
    <string name="text_edit_photo">Edit your photo</string>
</resources>