<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/fon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp">

        <TextView
            android:id="@+id/Login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:layout_marginBottom="140dp"
            android:fontFamily="@font/paytone_one"/>

        <TextView
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_enter_email"
            android:textSize="18dp"
            android:id="@+id/Text_email_login"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textemail"
            android:inputType="textEmailAddress"
            android:id="@+id/editText_email_login" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_below="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_enter_password"
            android:textSize="18dp"
            android:id="@+id/Text_pass_login"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editText_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textpassword"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hae_acc"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/gray_400"
            android:id="@+id/text_reg"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/text_login"
            android:id="@+id/login_button"
            android:background="@drawable/bg_button_logandreg"
            android:textColor="@color/black"/>


    </LinearLayout>

</ScrollView>