<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_activity"
    android:background="@drawable/fon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:fontFamily="@font/paytone_one"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_enter_name"
                android:textSize="18dp"
                android:id="@+id/textname"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textname"
                android:inputType="textPersonName"
                android:id="@+id/user_name"
                />

            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_enter_email"
                android:textSize="18dp"
                android:id="@+id/textemail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textemail"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                />

            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_enter_password"
                android:textSize="18dp"
                android:id="@+id/textpassword"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textpassword"
                android:inputType="textPassword" />

            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_enter_password_again"
                android:textSize="18dp"
                android:id="@+id/textpassword_again"/>

            <EditText
                android:id="@+id/password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textpassword_again"
                android:inputType="textPassword" />

            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_enter_phone_number"
                android:textSize="18dp"
                android:id="@+id/textPhoneNumber"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textPhoneNumber"
                android:inputType="phone"
                android:id="@+id/phoneNumber"
                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_already_have_acc"
            android:textColor="@color/gray_400"
            android:id="@+id/text_log"
            android:layout_marginVertical="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="Register"
            android:id="@+id/regist_button"
            android:background="@drawable/bg_button_logandreg"
            android:textColor="@color/black"/>


    </LinearLayout>

</ScrollView>