<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings_activity"
    android:background="@color/backgroud">

    <ImageButton
        android:id="@+id/button_back_sett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_sett" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_back_sett"
        app:layout_constraintTop_toBottomOf="@+id/button_back_sett"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="60dp">

        <Button
            android:textColor="@color/white"
            android:textSize="20dp"
            android:backgroundTint="@color/blue_ou"
            android:padding="15dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/change_yname"
            android:text="@string/change_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:textColor="@color/white"
            android:textSize="20dp"
            android:backgroundTint="@color/blue_ou"
            android:padding="15dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            />


    </LinearLayout>

    <Button
        android:textColor="@color/white"
        android:textSize="20dp"
        android:backgroundTint="@color/blue_ou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>