<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuInSett.ProfileActivity"
    android:orientation="vertical"
    android:background="@drawable/fon_main2">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_sett"
            android:id="@+id/btn_back"/>

        <TextView
            android:fontFamily="@font/b612_mono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/text_edit_name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:layout_marginVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/text_name"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Change Name"
                android:gravity="center"
                android:id="@+id/edit_name"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/color_btn_user"
        android:fontFamily="@font/b612_mono"
        android:text="@string/text_save"
        android:textColor="@color/backgroud"
        android:textSize="24dp"
        android:textStyle="bold" />

</RelativeLayout>